--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
   <script src="./public/client.js" type="text/javascript"></script>
-  <script src="widgets.js" type="text/javascript"></script>
+  <script src="/widgets.js" type="text/javascript"></script>
 </head>
 <body>
   <h1>Hey</h1>
