--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     var arr2=[];
     twttr.ready( function (twttr) {
       twttr.widgets.createTweet(
-        20,
+        arr2[0],
         document.getElementById('container')
         
         
