--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
 <script>
 twttr.ready( function (twttr) {
-  twttr.widgets.createTweet.then(
+  twttr.widgets.createTweet(
     "20",
     document.getElementById('container')
     
