--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
  
 
 
-/*
+
 twttr.ready( function (twttr) {
   twttr.widgets.createTweet(
-    "20",
+    tweet,
     document.getElementById('container')
     
     
@@ -53,7 +53,7 @@ console.log('Tweet added.');
 }
 );
 });
-*/
+
 </script>
 
 
