--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 $("#container").on("click", function(event) {
 
   for(var i=0; i<10; i++){
-    console.log("el valor de i es: "+i);
+    console.log("el valor del arreglo en iteracion  "+i+ "es: " +arr2[i]);
 twttr.ready( function (twttr) {
   twttr.widgets.createTweet(
     arr2[i],
