--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ $("#container").on("click", function(event) {
     console.log("el valor del arreglo en iteracion  "+i+ "es: " +arr2[i]);
 twttr.ready( function (twttr) {
   twttr.widgets.createTweet(
-    arr2[i],
+    arr2[5],
     document.getElementById('container')
     
     
